# tb2025_feb_desy

./: .gitignore  CMakeLists.txt
.snakemake/metadata/: YnVpbGQvMTAwX3Jvb3RpZmllcg==  ZHVtcC8xMDBfcm9vdGlmaWVyL1J1bjc3N19yb290aWZpZWQucm9vdA==
include/: H2GCROC_Common.hxx  H2GCROC_Lib.hxx
logs/200_PhaseScan/: PhaseScan_01  PhaseScan_07
scripts/: 100_Rootifier.cxx  100_rootifier.cxx  101_EventRecon.cxx  102_EventMatch.cxx  200_PhaseScan.cxx  201_PhaseScanToA.cxx  202_PedestalSub.cxx  203_AnalysisADC.cxx  204_TimeWalk.cxx  205_TemplateFit.cxx  206_AnalysisFit.cxx  207_ToACalib.cxx  208_EventFit.cxx  301_QC.cxx  302_FPGA_ADC_Analysis.cxx  302_RootifierFix.cxx
src/: H2GCROC_Common.cxx  H2GCROC_Lib.cxx
workflow/: snakefile
workflow/rules/: analysis.smk  analysisADC.smk  analysisPhase.smk  analysisToA.smk  compile.smk  download.smk  rootfile.smk
